--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,6 +25,6 @@
     "@types/react": "17.0.33",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
-    "typescript": "4.4.4"
+    "typescript": "5.1.6"
   }
 }
