--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@mui/material": "^5.15.3",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
-    "next": "12.0.1",
+    "next": "^12.3.4",
+    "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.1",
+    "eslint-config-next": "^12.3.4",
     "typescript": "5.1.6"
   }
 }
